--- a/20250210-35-CellChat/code/CellChat.qmd
+++ b/20250210-35-CellChat/code/CellChat.qmd
@@ -196,6 +196,19 @@ cellchat_list <- list(Control = cellchat_control, PD = cellchat_pd)
 saveRDS(cellchat_list,"../Documents/cellchat_list.rds")
 ```
 
+```{r}
+# 可视化
+  pathways.show <- cellchat_control@netP$pathways
+  p1 <- netVisual_heatmap(cellchat_control)
+
+  p2 <- netVisual_circle(cellchat_control@net$count, color.use = subclass_colors, vertex.weight = rowSums(cellchat_control@net$count), weight.scale = T, label.edge= F, title.name = "Number of interactions")
+  # 保存结果
+  pdf(paste0("../plot/CellChat_", ct_level,"_control", ".pdf"), width = 12, height = 8)
+  print(p1)
+  print(p2)
+  dev.off()
+```
+
 
 
 ```{r}
@@ -203,8 +216,8 @@ cellchat_list <- readRDS("../Documents/cellchat_list.rds")
 cellchat_control <- cellchat_list$Control
 cellchat_pd <- cellchat_list$PD
 
-cellchat_control <- Coumpute_Filter(cellchat_control)
-cellchat_pd <- Coumpute_Filter(cellchat_pd)
+cellchat_control <- Coumpute_Filter(cellchat_control,min.cells = 10)
+cellchat_pd <- Coumpute_Filter(cellchat_pd,min.cells = 10)
 
 # 比较总通讯强度
 pdf("../plot/Group_comparison.pdf", width = 15, height = 10)
